<resources>
    <string name="app_name">Practice Example App</string>
    <string name="button_go_patient_apps">App Patients</string>
    <string name="button_go_touch_apps">Touch Event App</string>
    <string name="button_go_sensor_apps">Sensor App</string>

    <string name="title_activity_inventory">Inventory</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="card_title_patients">List of patients</string>
    <string name="card_title_touch">Touch events</string>
    <string name="card_title_sensor">List of sensors</string>
    <string name="card_title_practice">Exampl XML Activity</string>
    <string name="card_title_mediaplayer">Media player</string>
    <string name="card_title_customitem">Custom Item</string>
    <string name="card_title_theme">Custom tabs example</string>
    <string name="card_title_intent">Intent</string>
    <string name="card_title_recyclerview">RecyclerView</string>
    <string name="card_title_lastlocation">Last Location Activity</string>
    <string name="card_title_accelerometer_change_color">Change Color Activity</string>
    <string name="card_title_environment">Environment sensors.</string>
    <string name="card_title_changer">Changer task.</string>
    <string name="card_title_room">User Room example.</string>
    <string name="card_title_api">API rest.</string>

    <string name="card_desc_patients">Activity with ListView and custom adapters. CRUD of patients.</string>
    <string name="card_desc_touch">Activity with the listener of several touch events.</string>
    <string name="card_desc_sensor">Activity with the list of the sensors presents in the device.</string>
    <string name="card_desc_practice">Activity with EditText, Button and a ListView that store new values</string>
    <string name="card_desc_mediaplayer">Activity with MediaPlayer and some controls with buttons</string>
    <string name="card_desc_customitem">Activity with Custom item with a button for interact</string>
    <string name="card_desc_theme">Example from Android Studio</string>
    <string name="card_desc_intent">Intent and other use.</string>
    <string name="card_desc_recyclerview">Activity with RecyclerView for display patient Information.</string>
    <string name="card_desc_lastlocation">Activity with the Last Location for display the Information.</string>
    <string name="card_desc_accelerometer_change_color">Activity that change the color of background according the changes in the accelerometer sensor.</string>
    <string name="card_desc_environment">Activity that shows the values of environment sensors.</string>
    <string name="card_desc_changer">Activity that execute a task every specifict period of time.</string>
    <string name="card_desc_room">Activity that work with Room for database management. We will work with User (id,firstname and lastname) like in the documentation.</string>
    <string name="card_desc_api">Activity that work and API rest request updating the GUI.</string>

    <string name="api_error">There is a problem with the resource</string>
    <string name="api_instruction">Push the button Get Info</string>
    <string name="btn_getinfo">Get Info</string>

    <string name="message_delete_patient">"Are you sure you want to delete this item?"</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_add">Add</string>
    <string name="btn_go_preferences">Go preferences</string>
    <string name="btn_go_newproduct">Add new product</string>
    <string name="btn_speedup">Speed Up</string>
    <string name="sensor_ambient">Ambient Temperature: </string>
    <string name="sensor_light">Light Sensor: </string>
    <string name="sensor_pressure">Pressure Sensor: </string>
    <string name="sensor_humidity">RelativeHumiditySensor: </string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="max_point_title">The Max score</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="info_information_lan_lot">This is an example that how can you get the last location of devices.</string>
</resources>