<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnvironmentSensorsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleAmbiete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensor_ambient" />

            <TextView
                android:id="@+id/valueAmbiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensor_light" />

            <TextView
                android:id="@+id/valueLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titlePressureSensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensor_pressure" />

            <TextView
                android:id="@+id/valuePressureSensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleRelativeHumiditySensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sensor_humidity" />

            <TextView
                android:id="@+id/valueRelativeHumiditySensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>