<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/goPatientApp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="goPatientApp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonTouchApp"
        android:layout_width="319dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="159dp"
        android:onClick="goTouchEventApp"
        android:text="@string/button_go_touch_apps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonYou"
        android:layout_width="319dp"
        android:layout_height="37dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="286dp"
        android:onClick="goPatientApp"
        android:text="@string/button_go_patient_apps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonTouchApp" />

    <Button
        android:id="@+id/buttonSensorApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="157dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="211dp"
        android:onClick="goSensorApp"
        android:text="@string/button_go_sensor_apps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonYou" />

    <Button
        android:id="@+id/buttonInventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="158dp"
        android:layout_marginBottom="129dp"
        android:onClick="goTabApp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSensorApp" />

</androidx.constraintlayout.widget.ConstraintLayout>